env/code_53f0449e6df2e/stderr.txt
  File "main.py", line 3
    print os.getcwd()
           ^
SyntaxError: invalid syntax
